# SupersatRN-C

./: README.md  pyproject.toml  requirements.txt
dyn_interf_measurements/: Double_Cation.npy  Double_Cation_DMF_DMSO.npy  MAPI.npy  MAPI2.npy
publication_AdvSc/: PlotCorrelations.py  all.py  parameter_investigation.py  playground.py  publ_results.py  style.py  supplementary.py
src/supersatrnc/: __init__.py  __main__.py  correlations.py  material_properties.py  materials.py
tests/: test_values.py
