[build-system]
requires = ["hatchling","scipy","numpy","overrides"]
build-backend = "hatchling.build"

[project]
name = "supersatrnc"
version = "0.0.1"
authors = [
  { name="Simon Ternes", email="ternes@ing.uniroma2.it" },
]
description = "Supersaturation Rate Numerical Calculator (SupersatRN-C) is a software package for calculating the dynamic thickness evolution of perovskite solution films subject to different quenching methods and determining the respective supersatruation rate at critical concentration."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MassTransferDynamics/SupersatRN-C"
"Bug Tracker" = "https://github.com/MassTransferDynamics/SupersatRN-C/issues"